--- a/_posts/2017-04-11-test-blog-1.markdown
+++ b/_posts/2017-04-11-test-blog-1.markdown
@@ -1,13 +1,12 @@
 ---
 layout: post
-project_title:  "The Public Trust"
-post_title: "Why we chose audio"
+project_title:  "Blog post 1"
 date:   2015-11-11 17:21:30 -0800
 project_url: http://projects.dailycal.org/public-trust/
-short_description: In an era of declining state funding, what makes UC Berkeley a public institution?
+short_description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 author: Sahil Chinoy and Chloee Weiner
-image: public-trust.jpg
-type: project
+image: blog-1.jpg
+type: blog
 ---
 In the course of our day-to-day coverage of the university, we write a lot of stories about the same handful of themes: tuition and fees, out-of-state enrollment, access and equity, and private funding, among others. These stories tend to be narrow in scope, as it’s difficult to connect the latest policy or tuition hike to the bigger picture with a 5 p.m. deadline. That means the larger story — what it means to be a public university in the face of these trends — goes untold.
 
