Change colors and make blog posts

--- a/_posts/2015-12-11-grades.markdown
+++ b/_posts/2015-12-11-grades.markdown
@@ -4,7 +4,7 @@ project_title:  "Guess the UC Berkeley department with the lowest grades"
 date:   2015-12-11 00:00:00 -0800
 project_url: http://projects.dailycal.org/grades/
 short_description: Do perceptions about the most difficult departments match reality? We looked through 1.5 million grades to find out.
-image: grades.png
+image: grades-1.png
 author: Sahil Chinoy and Ronald Kwan
-type: project
+type: blog
 ---
